--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.teal-hover {
+    @apply font-bold text-teal-600;
+  }
+  
+  .teal-hover:hover {
+    @apply text-teal-300;
+  }
